set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
cmake_minimum_required(VERSION 3.26)
project(acwing)

set(CMAKE_CXX_STANDARD 17)

add_executable(quickSort sort/quick/main.cpp)
add_executable(mergeSort sort/merge/mergeSort.cpp)
add_executable(int_binary binary_divide/int_binary.cpp)
add_executable(triple binary_divide/triple.cpp)
add_executable(quickSelect sort/quick/quickSelect.cpp)
add_executable(checkPrime math/checkPrime.cpp)
add_executable(dividePrime math/dividePrime.cpp)
add_executable(sievePrime math/sievePrime.cpp)
add_executable(sumOfDivisors math/sumOfDivisors.cpp)
add_executable(quickMi math/quickMi.cpp)
add_executable(gcd math/gcd.cpp)
add_executable(doublePointer basic_algorithm/doublePointer.cpp)
add_executable(799 basic_algorithm/799.cpp)
add_executable(mergeInterval basic_algorithm/mergeInterval.cpp)
add_executable(lowBit basic_algorithm/lowbit.cpp)
add_executable(checkSubSeq basic_algorithm/checkSubSeq.cpp)
add_executable(arrayItemTargerSum basic_algorithm/arrayItemTargerSum.cpp)
add_executable(spanSum basic_algorithm/spanSum.cpp)
add_executable(forward_list data_struct/forward_list.cpp)
add_executable(stack data_struct/stack.cpp)
add_executable(queue data_struct/queue.cpp)
